# Resell_App

./: .env  README.md  image_analysis.json  pyproject.toml  query_evaluation.json  search_query.json
Kleinanzeigen_Data/: kleinanzeigen_items.json
Kleinanzeigen_Input/: input_items.json
Output_Folder/research_20260111_204021/: evaluation_history.json  image_analysis.json  scraped_listings.json  search_queries_history.json  summary.json
Output_Folder/research_20260113_233459/: evaluation_history.json  image_analysis.json  scraped_listings.json  search_queries_history.json  summary.json
Output_Folder/research_20260114_000414/: evaluation_history.json  image_analysis.json  scraped_listings.json  search_queries_history.json  summary.json
Output_Folder/research_20260114_124402/: evaluation_history.json  image_analysis.json  scraped_listings.json  search_queries_history.json  summary.json
Output_Folder/research_20260114_130146/: evaluation_history.json  scraped_listings.json  search_queries_history.json  summary.json
Output_Folder/research_20260114_140101/: evaluation_history.json  scraped_listings.json  search_queries_history.json  summary.json
Output_Folder/research_20260114_152004/: image_analysis.json
Output_Folder/research_20260115_160651/: evaluation_1.json  evaluation_2.json  image_analysis.json
Output_Folder/research_20260115_161932/: evaluation_1.json  image_analysis.json
benchmark_results/: benchmark_20260123_134718.csv  benchmark_detailed_20260122_180910.json  benchmark_detailed_20260122_181113.json  benchmark_detailed_20260122_191829.json
(+86 files in other folders)
