[project]
name = "resell_app"
version = "0.1.0"
description = "resell_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scrapfly-sdk>=0.8.23",
    "selenium>=4.38.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
resell_app = "resell_app.main:run"
run_crew = "resell_app.main:run"
train = "resell_app.main:train"
replay = "resell_app.main:replay"
test = "resell_app.main:test"
run_with_trigger = "resell_app.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
